# polymarket-autoresearch

./: .gitignore  CLAUDE.md  README.md  SPEC.md  program.md  pyproject.toml
core/: config.py  evaluator.py  market_data.py  paper_trader.py  portfolio.py
dashboard/: tui.py
experiments/: loop.py  self_improve.py
scripts/: dashboard.py  replay.py  run_autonomous.py
strategies/: arb_scanner.py  base.py  calibration_bias.py  crypto_threshold.py  flash_crash.py  news_agent.py  whale_follow.py
